--- a/app/src/main/res/layout/activity_dialog.xml
+++ b/app/src/main/res/layout/activity_dialog.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="usercomms.joemarini.example.com.usercommunications.DialogActivity">
+    tools:context=".DialogActivity">
 
     <Button
         android:id="@+id/btnSimpleDialog"
